--- a/.ado/eshoponweb-ci.yml
+++ b/.ado/eshoponweb-ci.yml
@@ -2,10 +2,13 @@
 # trigger:
 # - main
 
-resources:
-  repositories:
-    - repository: self
-      trigger: none
+trigger:
+   branches:
+     include:
+     - main
+   paths:
+     include:
+     - src/web/*
 
 stages:
 - stage: Build
