Set up CI with Azure Pipelines
[skip ci]

--- a/.ado/eshoponweb-ci.yml
+++ b/.ado/eshoponweb-ci.yml
@@ -1,11 +1,13 @@
 #NAME THE PIPELINE SAME AS FILE (WITHOUT ".yml")
 # trigger:
 # - main
-
-resources:
-  repositories:
-    - repository: self
-      trigger: none
+trigger:
+   branches:
+     include:
+     - main
+   paths:
+     include:
+     - src/web/*
 
 stages:
 - stage: Build
