--- a/.ado/eshoponweb-cd-webapp-docker.yml
+++ b/.ado/eshoponweb-cd-webapp-docker.yml
@@ -6,10 +6,10 @@ resources:
       trigger: none
 
 variables:
-  azureServiceConnection: 'azure-connection'
+  azureServiceConnection: 'azure-connection-CICD'
   resourceGroup: 'rg-az400-container-NAME'
-  location: 'westeurope'
-  subscriptionId: 'YOUR-SUBSCRIPTION-ID'
+  location: 'eastus'
+  subscriptionId: '7f62f0c4-db44-4d69-9eb0-c8f6f50718d9'
 
 stages:
 - stage: Deploy
