--- a/.ado/eshoponweb-ci.yml
+++ b/.ado/eshoponweb-ci.yml
@@ -53,3 +53,27 @@ stages:
         PathtoPublish: '$(Build.SourcesDirectory)/.azure/bicep/webapp.bicep'
         ArtifactName: 'Bicep'
         publishLocation: 'Container'
+
+- stage: Deploy
+  displayName: Deploy para Azure Web App
+  jobs:
+  - job: Deploy
+    pool:
+       vmImage: 'windows-2019'
+    steps:
+    - task: DownloadBuildArtifacts@0
+      inputs:
+       buildType: 'current'
+       downloadType: 'single'
+       artifactName: 'website'
+       downloadPath: '$(Build.ArtifactStagingDirectory)'
+    - task: AzureRmWebAppDeployment@4
+      inputs:
+        ConnectionType: 'AzureRM'
+        azureSubscription: '7f62f0c4-db44-4d69-9eb0-c8f6f50718d9'
+        appType: 'webApp'
+        WebAppName: 'eshoponWebYAML110723581'
+        packageForLinux: '$(Build.ArtifactStagingDirectory)/**/Web.zip'
+
+
+  
