--- a/.ado/eshoponweb-cd-aci.yml
+++ b/.ado/eshoponweb-cd-aci.yml
@@ -11,13 +11,13 @@ resources:
       trigger: none
 
 variables:
-  location: 'westeurope'
+  location: 'eastus'
   templateFile: '.azure/bicep/aci.bicep'
-  subscriptionid: 'YOUR-SUBSCRIPTION-ID'
-  azureserviceconnection: 'azure subs'
+  subscriptionid: '7f62f0c4-db44-4d69-9eb0-c8f6f50718d9'
+  azureserviceconnection: 'terraformteste'
   webappname: 'az400eshop-NAME'
-  acr-login-server: 'YOUR-ACR.azurecr.io'
-  acr-username: 'ACR-USERNAME'
+  acr-login-server: 'crwtcmyucjic2tq.azurecr.io'
+  acr-username: 'crwtcmyucjic2tq'
   resource-group: 'AZ400-EWebShop-NAME' 
 
 
