--- a/.ado/eshoponweb-cd-webapp-code.yml
+++ b/.ado/eshoponweb-cd-webapp-code.yml
@@ -10,10 +10,10 @@ resources:
 
 variables:
   resource-group: 'AZ400-EWebShop-NAME'
-  location: 'westeurope'
+  location: 'eastus'
   templateFile: '.azure/bicep/webapp.bicep'
   subscriptionid: 'YOUR-SUBSCRIPTION-ID'
-  azureserviceconnection: 'azure subs'
+  azureserviceconnection: 'terraformteste'
   webappname: 'az400-webapp-NAME'
   # webappname: 'webapp-windows-eshop'
   
