--- a/.ado/eshoponweb-cd-webapp-code.yml
+++ b/.ado/eshoponweb-cd-webapp-code.yml
@@ -3,8 +3,8 @@
 # Trigger CD when CI executed succesfully
 resources:
   pipelines:
-    - pipeline: eshoponweb-ci
-      source: eshoponweb-ci # given pipeline name
+    - pipeline: AplicativoWeb
+      source: AplicativoWeb # given pipeline name
       trigger: true
 
 
@@ -12,7 +12,7 @@ variables:
   resource-group: 'AZ400-EWebShop-NAME'
   location: 'eastus'
   templateFile: '.azure/bicep/webapp.bicep'
-  subscriptionid: 'YOUR-SUBSCRIPTION-ID'
+  subscriptionid: '7f62f0c4-db44-4d69-9eb0-c8f6f50718d9'
   azureserviceconnection: 'terraformteste'
   webappname: 'az400-webapp-NAME'
   # webappname: 'webapp-windows-eshop'
@@ -27,7 +27,7 @@ stages:
       vmImage: windows-latest
     steps:
     #download artifacts
-    - download: eshoponweb-ci
+    - download: AplicativoWeb
   
     # Deploy App Service Plan + App Service using Bicep
     - task: AzureResourceManagerTemplateDeployment@3
@@ -50,7 +50,7 @@ stages:
       displayName: Publish Website to WebApp
       inputs:
         ConnectionType: 'AzureRM'
-        azureSubscription: 'azure subs'
+        azureSubscription: 'pago por uso'
         appType: 'webApp'
         WebAppName: '$(webappname)'
         packageForLinux: '$(Pipeline.Workspace)/**/Web.zip'
