--- a/.ado/eshoponweb-cd-webapp-code.yml
+++ b/.ado/eshoponweb-cd-webapp-code.yml
@@ -50,7 +50,7 @@ stages:
       displayName: Publish Website to WebApp
       inputs:
         ConnectionType: 'AzureRM'
-        azureSubscription: 'pago por uso'
+        azureSubscription: 'terraformteste'
         appType: 'webApp'
         WebAppName: '$(webappname)'
         packageForLinux: '$(Pipeline.Workspace)/**/Web.zip'
