--- a/.ado/eshoponweb-sonar-ci.yml
+++ b/.ado/eshoponweb-sonar-ci.yml
@@ -28,10 +28,10 @@ stages:
     - task: SonarCloudPrepare@1
       inputs:
         SonarCloud: 'SonarSC'
-        organization: 'Your Sonarcloud org'
+        organization: 'ebertesantos'
         scannerMode: 'MSBuild'
-        projectKey: 'your sonarcloud project key'
-        projectName: 'your sonarcloud project name'
+        projectKey: 'ebertesantos_AplicativoWeb'
+        projectName: 'AplicativoWeb'
     - task: DotNetCoreCLI@2
       displayName: Build
       inputs:
