--- a/.ado/eshoponweb-sonar-ci.yml
+++ b/.ado/eshoponweb-sonar-ci.yml
@@ -27,7 +27,7 @@ stages:
 
     - task: SonarCloudPrepare@1
       inputs:
-        SonarCloud: 'SonarSC'
+        SonarCloud: 'sonarcloud' # Service connection name
         organization: 'ebertesantos'
         scannerMode: 'MSBuild'
         projectKey: 'ebertesantos_AplicativoWeb'
