--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,12 +6,12 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@main
+        uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           
       - name: Run Snyk to check Docker image for vulnerabilities
-        uses: snyk/actions/docker@main
+        uses: snyk/actions/docker@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
